--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.16.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
+    "resend": "^6.7.0",
     "winston": "^3.19.0"
   },
   "devDependencies": {
